# cmake-init-use-pkg-config

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: install-config.cmake.in  install-rules.cmake  variables.cmake
cmake/find/: Findgumbo.cmake
include/use-pkg-config/: use-pkg-config.hpp
test/: CMakeLists.txt
test/source/: use-pkg-config_test.cpp
